# mindecho_backend

./: .dockerignore  .env.sample  .env.test  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  package-lock.json  package.json  vitest.config.js  vitest.integration.config.js
.plan/: CI-improvement-plan.md  android-migration-report-for-manager.md  android-migration-report.md  ci-improvement.md  monitor-and-logs.md  monitor-logs-followups.md  prompt-cache.md  scaling-plan-100-concurrent-users.md  sse-message-streaming.md
inference/: Dockerfile  main.py  pyproject.toml  test_pipeline.py
inference/src/: knowledge.py  models.py  prompts.py  retry_utils.py  router.py
inference/src/providers/: __init__.py  anthropic.py  gemini.py
inference/tests/: test_knowledge.py  test_retry_utils.py  test_router_semaphore.py
nginx/: nginx.conf
prisma/: schema.prisma  seed_scales.sql
python/: diary_analyzer.py  export_chat_history.py  export_user_metrics.py  main.py  pyproject.toml
rag/: pyproject.toml
rag/src/: config.py  graph.py  indexer.py  main.py  models.py  prompts.py  tools.py
scripts/: entrypoint-prod.sh  log-rotator.js  seed-test-accounts.js  summarize-raw.js  test-chat.js  test-llm-connection.js
src/: app.js  ecosystem.config.cjs  ecosystem.config.example.cjs  server.js
tasks/: lessons.md  todo.md
test-frontend/: index.html  package-lock.json  package.json  vite.config.js
tests/: app.test.js  auth.test.js  chat.test.js  checkin.test.js  diary.test.js  (+5 more)
(+363 files in other folders)
